--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "debug": "^2.2.0",
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "request": "^2.69.0"
   },
   "devDependencies": {
     "express-generator": "^4.13.1"
